--- a/EatFast/EatFast/Pages/MembersPage.xaml
+++ b/EatFast/EatFast/Pages/MembersPage.xaml
@@ -1,11 +1,33 @@
 ﻿<Page
-    x:Class="Teamer.Pages.MainTaskPage"
+    x:Class="Teamer.Pages.MembersPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Teamer.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate x:Name="memberList">
+            <Grid  >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="7*"/>
+                </Grid.ColumnDefinitions>
+<!--binding-->
+                    <Image
+                        Grid.Column="0" 
+                        Source="/Design/Untitled.png" />
+                
+                    <TextBlock 
+                        Margin="10"
+                        Grid.Column="1"
+                        VerticalAlignment="Bottom"
+                        Text="Pesho peshov Peshaka"/>
+            </Grid>
+
+        </DataTemplate>
+    </Page.Resources>
+
 
     <Grid Style="{StaticResource mainGrid}">
         <Grid.RowDefinitions>
@@ -14,18 +36,12 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="7*"/>
-            <RowDefinition Height="0.6*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
-        <!--<TextBlock VerticalAlignment="Bottom" 
-                   Text="Telerik" 
-                   HorizontalAlignment="Left" 
-                   FontSize="33"/>-->
-
+        
         <Grid Grid.Row="0"
                    Grid.Column="0"
                    Grid.ColumnSpan="2"
@@ -49,38 +65,24 @@
                 VerticalAlignment="Stretch"
                 Content="Tasks"
                 Style="{StaticResource Cool}"/>
-        <TextBlock Grid.Row="4"
-                   Grid.Column="0"
-                   Grid.ColumnSpan="2"
-                   HorizontalAlignment="Left"
-                   VerticalAlignment="Top"
-                   Text="Main Project"
-                   FontSize="40"/>
-        <TextBlock Width="310"
-                   Height="270"
-                   Grid.Row="4"
-                   Grid.Column="0"
-                   Grid.ColumnSpan="2"
-                   FontSize="17"
-                   Foreground="Black"
-                   TextWrapping="WrapWholeWords"
-                   Text="Windows Application            
-                     Main perposes of the project are to be completely buil mobile application for Windows 10.
-                   The project should contains separated server , database and UI.The code must be KPK.
-                   asdaefgfdfg dfg er sd ksdkfmwe werkfmsdfm wknfs"/>
+        <TextBlock 
+            Grid.Row="3"
+            Grid.ColumnSpan="2"
+            VerticalAlignment="Bottom"
+            FontSize="20"
+            Text="Members"
+            />
 
-        <TextBox
-            Grid.Row="5"
-            PlaceholderText="Project Password" 
-            Foreground="Black" 
-            />
-        <Button 
-            Style="{StaticResource Cool}"
-            Margin="0"
-            FontSize="13"
-            Grid.Row="5"
-            Grid.Column="1"
-            Content="Go to Leader page"
-            />
+        <ListView Grid.Row="4"
+                  Grid.Column="0"
+                  Grid.RowSpan="4"
+                  Grid.ColumnSpan="3"
+                  HorizontalAlignment="Stretch"
+                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                  ItemTemplate="{StaticResource memberList}">
+            <Grid>
+
+            </Grid>
+        </ListView>
     </Grid>
 </Page>
