--- a/EatFast/EatFast/MainPage.xaml
+++ b/EatFast/EatFast/MainPage.xaml
@@ -37,7 +37,7 @@
               Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="20"/>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
