--- a/EatFast/EatFast/Pages/CreateOrganizationPage.xaml
+++ b/EatFast/EatFast/Pages/CreateOrganizationPage.xaml
@@ -10,24 +10,24 @@
 
     <Page.Resources>
         <DataTemplate x:Name="testTemplate">
-                    <Grid >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
+            <Grid >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
 
-                          <!--Binding-->
-                        <TextBlock  Width="200" Grid.Column="0" Text="asdasdasdd"/>
-                        <Button Style="{StaticResource Cool}" Grid.Column="1" Content="Accept"/>
-                        <Button Style="{StaticResource Cool}" Grid.Column="2" Content="Reject"/>
+                <!--Binding-->
+                <TextBlock  Width="200" Grid.Column="0" Text="asdasdasdd"/>
+                <Button Style="{StaticResource Cool}" Grid.Column="1" Content="Accept"/>
+                <Button Style="{StaticResource Cool}" Grid.Column="2" Content="Reject"/>
 
-                    </Grid>
+            </Grid>
 
         </DataTemplate>
     </Page.Resources>
 
-    
+
     <Grid Style="{StaticResource mainGrid}">
         <Grid.RowDefinitions>
             <RowDefinition Height="58*"/>
@@ -46,14 +46,15 @@
         <TextBlock Text="Create Organization"
                    Grid.Row="0"
                    FontSize="30"  />
-        <TextBlock Text="Project Name"
+        <TextBlock Text="Organization Name"
                    Grid.Row="1"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Bottom" />
 
-        <TextBox Grid.Row="2"
-                 PlaceholderText="Enter Poject Name"
-              VerticalAlignment="Center" 
+        <TextBox x:Name="OrganizationCreate"
+            Grid.Row="2"
+                 PlaceholderText="Enter Organization Name"
+              VerticalAlignment="Center"
                  TextAlignment="Left"/>
 
         <TextBlock Text="Join Organizations"
@@ -62,26 +63,27 @@
         <Button Style="{StaticResource Cool}" 
             Content="Create" 
             Grid.Row="4" 
-            Height="30"/>
+            Height="30"
+                Click="CreateOrganization"/>
 
-        <TextBlock Text="Choose Project"
-                   Grid.Row="6"
-                   HorizontalAlignment="Left"
-                   VerticalAlignment="Bottom" />
-
-        <ListView ItemTemplate="{StaticResource testTemplate}"
-                  Grid.Row="7"
-                  Grid.RowSpan="3"
-                  HorizontalAlignment="Stretch"
-                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                  BorderBrush="Gray"
-                  BorderThickness="2">
+                 
+        <ListView 
+            ItemTemplate="{StaticResource testTemplate}"
+            Grid.Row="7"
+            Grid.RowSpan="3"
+            HorizontalAlignment="Stretch"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden"
+            BorderBrush="Gray"
+            BorderThickness="2">
             <Grid>
-                
             </Grid>
-
         </ListView>
-       
-        <Button Style="{StaticResource Cool}" Content="Join" Grid.Row="10" Height="30"/>
+
+        <Button 
+            Style="{StaticResource Cool}" 
+            Content="Join"
+            Grid.Row="10" 
+            Height="30"
+            Click="JoinOrganization"/>
     </Grid>
 </Page>
