--- a/EatFast/EatFast/Pages/MembersPage.xaml
+++ b/EatFast/EatFast/Pages/MembersPage.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Name="memberList">
-            <Grid>
+            <Grid
+                Tapped="GoToPesronsAccountPage">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="7*"/>
