--- a/EatFast/EatFast/Pages/PersonsAccontPage.xaml
+++ b/EatFast/EatFast/Pages/PersonsAccontPage.xaml
@@ -9,7 +9,9 @@
 
     <Page.Resources>
         <DataTemplate x:Name="tacskTemplate">
-            <Grid  BorderBrush="Gray" BorderThickness="2">
+            <Grid  DoubleTapped="GoToCurrentTask"
+                BorderBrush="Gray"
+                BorderThickness="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="10*"/>
                     <ColumnDefinition Width="3 *"/>
