--- a/EatFast/EatFast/Pages/CurrentTask.xaml
+++ b/EatFast/EatFast/Pages/CurrentTask.xaml
@@ -71,6 +71,9 @@
             Height="400"
             Foreground="Black"
             FontSize="14"
+            ManipulationMode="All"
+            ManipulationDelta="Zoom"
+            DoubleTapped="TextBlock_DoubleTapped"
             Text="Lorem Ipsum is simply dummy text of the printing 
  and typesetting industry. Lorem Ipsum has been the 
  industry's standard dummy text ever since the 1500s,
