--- a/EatFast/EatFast/Pages/MembersPage.xaml
+++ b/EatFast/EatFast/Pages/MembersPage.xaml
@@ -8,8 +8,7 @@
     mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Name="memberList">
-            <Grid
-                Tapped="GoToPesronsAccountPage">
+            <Grid  Tapped="GoToPesronsAccountPage">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="7*"/>
