Adding camera for taking an account picture in AccountPage

--- a/EatFast/EatFast/Pages/AccountPage.xaml
+++ b/EatFast/EatFast/Pages/AccountPage.xaml
@@ -78,7 +78,8 @@
                    Text=" Telerik Organization"
                    FontSize="19"/>
         </Grid>
-        <Image Grid.Row="0"
+        <Image Name="img" 
+               Grid.Row="0"
                Grid.Column="2"
                Source="/Design/Untitled.png" 
                HorizontalAlignment="Left"
@@ -89,7 +90,8 @@
                 Grid.Column="2"
                 FontSize="13"
                 VerticalAlignment="Top"
-                Content="Take picture" Grid.ColumnSpan="2">
+                Content="Take picture" Grid.ColumnSpan="2" 
+                Click="TakePicture">
             <Button.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="Gray" Offset="0.0"/>
