summary page and fixes

--- a/EatFast/EatFast/MainPage.xaml
+++ b/EatFast/EatFast/MainPage.xaml
@@ -60,5 +60,9 @@
                     Click="AuthenticateUser"
                     Width="Auto"/>
         </Grid>
+
+        <ListBox ItemsSource="{Binding Tasks}">
+            <TextBlock Text="{Binding Name}"></TextBlock>
+        </ListBox>
     </Grid>
 </Page>
