--- a/EatFast/EatFast/App.xaml
+++ b/EatFast/EatFast/App.xaml
@@ -21,6 +21,7 @@
         <Style TargetType="Button" x:Key="Cool">
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Width" Value="150"/>
+            <Setter Property="FontSize" Value="14"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="BorderBrush" Value="Gray"/>
             <Setter Property="BorderThickness" Value="2"/>
