--- a/EatFast/EatFast/Pages/CurrentTask.xaml
+++ b/EatFast/EatFast/Pages/CurrentTask.xaml
@@ -70,7 +70,7 @@
             Width="300"
             Height="400"
             Foreground="Black"
-            FontSize="14"
+            FontSize="11"
             ManipulationMode="All"
             ManipulationDelta="Zoom"
             DoubleTapped="TextBlock_DoubleTapped"
@@ -79,7 +79,17 @@
  industry's standard dummy text ever since the 1500s,
  release of Letraset sheets containing Lorem Ipsum passages,
  and more recently with desktop publishing software like Aldus 
- PageMaker including versions of Lorem Ipsum."
+ PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing 
+ and typesetting industry. Lorem Ipsum has been the 
+ industry's standard dummy text ever since the 1500s,
+ release of Letraset sheets containing Lorem Ipsum passages,
+ and more recently with desktop publishing software like Aldus 
+ PageMaker including versions of Lorem IpsumLorem Ipsum is simply dummy text of the printing 
+ and typesetting industry. Lorem Ipsum has been the 
+ industry's standard dummy text ever since the 1500s,
+ release of Letraset sheets containing Lorem Ipsum passages,
+ and more recently with desktop publishing software like Aldus 
+ PageMaker including versions of Lorem Ipsum"
             TextWrapping="WrapWholeWords"/>
         </ScrollViewer>
     </Grid>
