--- a/EatFast/EatFast/Pages/MainTaskPage.xaml
+++ b/EatFast/EatFast/Pages/MainTaskPage.xaml
@@ -60,7 +60,7 @@
                 Content="Tasks"
                 Click="GoToTaskPage"
                 Style="{StaticResource Cool}"/>
-        
+
         <TextBlock Grid.Row="3"
                    Grid.Column="0"
                    Grid.ColumnSpan="2"
@@ -77,11 +77,21 @@
             Width="300"
             Height="400"
             Foreground="Black"
-            FontSize="14"
+            FontSize="11"
             ManipulationMode="All"
             ManipulationDelta="Zoom"
-            DoubleTapped="TextBlock_DoubleTapped"
+                DoubleTapped="TextBlock_DoubleTapped"
             Text="Lorem Ipsum is simply dummy text of the printing 
+ and typesetting industry. Lorem Ipsum has been the 
+ industry's standard dummy text ever since the 1500s,
+ release of Letraset sheets containing Lorem Ipsum passages,
+ and more recently with desktop publishing software like Aldus 
+ PageMaker including versions of Lorem Ipsum Ipsum is simply dummy text of the printing 
+ and typesetting industry. Lorem Ipsum has been the 
+ industry's standard dummy text ever since the 1500s,
+ release of Letraset sheets containing Lorem Ipsum passages,
+ and more recently with desktop publishing software like Aldus 
+ PageMaker including versions of Lorem Ipsuvm Ipsum is simply dummy text of the printing 
  and typesetting industry. Lorem Ipsum has been the 
  industry's standard dummy text ever since the 1500s,
  release of Letraset sheets containing Lorem Ipsum passages,
