--- a/EatFast/EatFast/Pages/MainTaskPage.xaml
+++ b/EatFast/EatFast/Pages/MainTaskPage.xaml
@@ -40,10 +40,11 @@
                    Background="Green"
                    VerticalAlignment="Bottom">
                 <TextBlock    
-                Grid.ColumnSpan="2"
-                   HorizontalAlignment="Left"
-                   Text=" Telerik Organization"
-                   FontSize="19"/>
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Left"
+                    Text="Telerik"
+                    Tapped="TextBlock_Tapped"
+                    FontSize="19"/>
             </Grid>
         </Grid>
         <Button Grid.Row="2"
